--- a/assets/styles/nelliel/nelliel.css
+++ b/assets/styles/nelliel/nelliel.css
@@ -33,7 +33,6 @@ a:hover {
 
 /* General formatting */
 .content-page {
-    width: 100%;
     height: 100%;
     padding: 4px;
 }
@@ -96,7 +95,6 @@ a:hover {
     font-weight: bold;
     text-align: center;
     padding: 3px;
-    width: 100%;
 }
 
 .manage-board-header {
@@ -105,7 +103,6 @@ a:hover {
     font-weight: bold;
     text-align: center;
     padding: 3px;
-    width: 100%;
 }
 
 .manage-sub-header {
@@ -114,7 +111,6 @@ a:hover {
     font-weight: bold;
     text-align: center;
     padding: 3px;
-    width: 100%;
 }
 
 .data-table {
